# rust-chat-server

./: Cargo.toml  README.md  justfile
src/: client.rs  connection.rs  error.rs  frame.rs  lib.rs  main.rs  server.rs
src/client/: error.rs  mod.rs
src/common/: error.rs  message.rs  mod.rs  room.rs  user.rs
src/common/messages/: client.rs  handshake.rs  mod.rs  process.rs  room.rs  server.rs  user.rs
src/connection/: error.rs  frame.rs  mod.rs
src/server/: client_handler.rs  error.rs  mod.rs  processor.rs  room_handler.rs  user_handler.rs
