[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"
default-run = "server"


[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"
bincode = "2.0.0-rc.3"
derive_more = "0.99"
rand = "0.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = "0.27"

dotenv = "0.15"
